# raad-tech

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260712_2004_3d407b5ec230_iam_create_users_and_refresh_tokens_.py  20260713_1131_515fe8b7a640_organization_create_organizations_and_.py  20260714_1816_1fcf588d8ff7_fleet_device_create_vehicles_devices_.py  20260715_1150_a74d65d4fccf_tracking_create_vehicle_positions_and_.py  20260717_1600_8ffa6434d344_iam_create_users_and_refresh_tokens_.py  20260717_1602_9e901ca06186_fleet_device_create_vehicles_devices_.py  20260717_1602_e42916138971_organization_create_organizations_and_.py  20260717_1646_8589ef0ab6bb_tracking_create_vehicle_positions_and_.py  20260717_1917_ed48df51b591_transport_ops_create_students_table.py  20260717_2138_4b43a835fc86_transport_ops_create_parents_table.py  20260717_2222_ff41b1f3c61c_transport_ops_create_student_parents_.py  20260718_1908_8bde77c847c0_transport_ops_create_drivers_table.py  20260718_1936_71b67f0e5709_transport_ops_create_routes_and_stops_.py  20260719_1015_17753b338730_transport_ops_create_trips_table.py  20260719_1400_acfa30ebf4d8_transport_ops_create_student_.py  20260720_0900_addb6114f18a_billing_create_plans_subscriptions_.py  20260720_0930_56e86806baa2_notifications_create_notifications_.py  20260720_1000_1292703c3024_reporting_create_report_runs_table.py  20260721_0900_5437a5d1651b_iam_create_role_permissions_table.py  20260721_0930_054a850353e7_organization_create_region_and_.py  20260721_1000_65009ecd235a_video_create_video_sessions_table.py  20260721_1030_57ccbb4bfda1_core_create_audit_entries_table.py  20260721_1100_6dfdcc8b1b09_platform_audit_create_system_settings_table.py
backend/raad/: main.py
backend/raad/core/audit/: __init__.py  writer.py
backend/raad/core/config/: __init__.py  settings.py
backend/raad/core/db/: __init__.py  base.py  engine.py  mixins.py  repository.py  unit_of_work.py
backend/raad/core/di/: __init__.py  bootstrap.py  container.py
backend/raad/core/errors/: __init__.py  envelope.py  exceptions.py  handlers.py
backend/raad/core/events/: __init__.py  base.py  outbox.py  ports.py  processor.py  redis_streams.py
backend/raad/core/ids/: __init__.py  generator.py
backend/raad/core/logging/: __init__.py  context.py  formatter.py  redaction.py  setup.py
backend/raad/core/pagination/: __init__.py
backend/raad/core/policies/: __init__.py  base.py  subscription_access.py  video_access.py
backend/raad/core/security/: __init__.py  claims.py  exceptions.py  password_hashing.py  password_policy.py  permissions.py  tokens.py  utils.py
backend/raad/core/tenancy/: __init__.py  principal.py  resolver.py  scope.py
backend/raad/core/time/: __init__.py  clock.py
backend/tests/architecture/: _ast_utils.py  test_api_layer_boundaries.py  test_application_purity.py  test_domain_purity.py  test_layer_dependency_direction.py  test_module_boundaries.py
backend/tests/contract/: test_api_contracts_routes.py
backend/tests/integration/: test_audit_entries_transactional_write.py  test_billing_repository.py  test_fleet_device_repository.py  test_iam_repository.py  test_notifications_repository.py  test_organization_repository.py  test_platform_audit_repository.py  test_postgres_repository_invariants.py  test_rbac_and_scope_resolver.py  test_realtime_broker_fanout.py  test_reporting_repository.py  test_tracking_redis_latest_position.py  test_tracking_repository.py  test_transport_ops_driver_repository.py  test_transport_ops_parent_repository.py  test_transport_ops_route_repository.py  test_transport_ops_student_assignment_repository.py  test_transport_ops_student_parent_repository.py  test_transport_ops_student_repository.py  test_transport_ops_trip_repository.py  test_video_repository.py
backend/tests/unit/: test_billing_application.py  test_billing_domain.py  test_core_audit_writer.py  test_core_pagination.py  test_core_security_tokens.py  test_core_subscription_access_policy.py  test_core_video_access_policy.py  test_fleet_device_application.py  test_fleet_device_domain.py  test_iam_application.py  test_iam_domain.py  test_notification_subscribers.py  test_notifications_application.py  test_notifications_domain.py  test_notifications_ws.py  test_organization_application.py  test_organization_domain.py  test_platform_audit_application.py  test_platform_audit_domain.py  test_policy_guards.py  test_realtime.py  test_redis_streams_broker.py  test_report_worker.py  test_reporting_application.py  test_reporting_domain.py  test_tracking_application.py  test_tracking_domain.py  test_tracking_redis_latest_position.py  test_tracking_ws.py  test_transport_ops_driver_application.py  test_transport_ops_driver_domain.py  test_transport_ops_parent_application.py  test_transport_ops_parent_domain.py  test_transport_ops_route_application.py  test_transport_ops_route_domain.py  test_transport_ops_student_application.py  test_transport_ops_student_assignment_application.py  test_transport_ops_student_assignment_domain.py  test_transport_ops_student_domain.py  test_transport_ops_student_parent_application.py  (+5 more)
services/jt808/: README.md  pyproject.toml
services/jt808/src/: __init__.py  config.py  logging_setup.py  server.py
services/jt808/tests/: test_authentication_registration_integration.py  test_authentication_response.py  test_bulk_position_body.py  test_checksum.py  test_config.py  test_device_session_manager.py  test_device_session_registry.py  test_dispatcher.py  test_encoder.py  test_escaping.py  test_framing.py  test_handler_registry.py  test_header.py  test_location_bulk_handlers.py  test_parser.py  test_position_body.py  test_position_pipeline_integration.py  test_reassembly.py  test_registration_authentication_handlers.py  test_registration_body.py  test_registration_response.py  test_server_dispatch_integration.py  test_server_integration.py  test_server_session_integration.py  test_session_registry.py
(+371 files in other folders)
