# RAAD Business API — package configuration.
#
# Dependencies below are limited to what Phase 4.2 (Backend Foundation) actually imports:
# FastAPI + its ASGI server, and pydantic-settings for typed configuration. SQLAlchemy,
# Alembic, an async MySQL driver, a broker client, and a worker runtime (Celery/arq — open
# item, Backend LLD §20.1) are added when the persistence/broker/worker layers are wired in
# a later phase — not included yet since this phase creates no database tables and no
# broker/worker code.
#
# Dependency management tool (Poetry / PDM / plain pip) and dev tooling (pytest, ruff/black/
# mypy) are not yet decided by approved documentation — this file uses the PEP 621 format,
# installable with plain `pip install -e .` regardless of that later choice.

[project]
name = "raad-business-api"
version = "0.1.0"
description = "RAAD Platform — Business API (FastAPI modular monolith)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Flat layout with `raad/` (the package) and `migrations/`/`tests/` (not packages) both at
# the repo root — restrict discovery to the actual application package.
include = ["raad*"]
