# RAAD Business API — package configuration.
#
# Dependencies below are limited to what's actually imported so far. Phase 4.2 (Backend
# Foundation) added FastAPI + its ASGI server and pydantic-settings. Phase 4.4 (Database
# Foundation) adds SQLAlchemy (async engine/ORM), Alembic (migrations, per
# .claude/rules/database.md), and asyncmy (async MySQL 8.x driver). A broker client and a
# worker runtime (Celery/arq — open item, Backend LLD §20.1) are still deferred to when the
# broker/worker layers are wired in a later phase.
#
# Dependency management tool (Poetry / PDM / plain pip) and dev tooling (pytest, ruff/black/
# mypy) are not yet decided by approved documentation — this file uses the PEP 621 format,
# installable with plain `pip install -e .` regardless of that later choice.

[project]
name = "raad-business-api"
version = "0.1.0"
description = "RAAD Platform — Business API (FastAPI modular monolith)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncmy>=0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Flat layout with `raad/` (the package) and `migrations/`/`tests/` (not packages) both at
# the repo root — restrict discovery to the actual application package.
include = ["raad*"]
