# RAAD Business API — package configuration.
#
# Dependencies below are limited to what's actually imported so far. Phase 4.2 (Backend
# Foundation) added FastAPI + its ASGI server and pydantic-settings. Phase 4.4 (Database
# Foundation) adds SQLAlchemy (async engine/ORM), Alembic (migrations, per
# .claude/rules/database.md). ADR-0002 (PostgreSQL migration) replaced the original asyncmy
# (MySQL) driver with asyncpg. Backend Stabilization phase adds `redis` (the official Python
# client, BSD-3-Clause license; its bundled `redis.asyncio` submodule replaces the old separate
# `aioredis` package, merged upstream since redis-py 4.2) for `tracking.infra.adapters.
# RedisLatestPositionPort` — Database Design §7.1's documented latest-vehicle-position store.
# A broker client and a worker runtime (Celery/arq — open item, Backend LLD §20.1) are still
# deferred to when the broker/worker layers are wired in a later phase.
#
# Dependency management tool (Poetry / PDM / plain pip) and dev tooling (pytest, ruff/black/
# mypy) are not yet decided by approved documentation — this file uses the PEP 621 format,
# installable with plain `pip install -e .` regardless of that later choice.

[project]
name = "raad-business-api"
version = "0.1.0"
description = "RAAD Platform — Business API (FastAPI modular monolith)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Flat layout with `raad/` (the package) and `migrations/`/`tests/` (not packages) both at
# the repo root — restrict discovery to the actual application package.
include = ["raad*"]
